--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: animate_do
-description: Simple animations inspired on Animate.css
+description: Simple animations inspired on Animate.css - Author Fernando Herrera
 version: 0.1.0
-author: Fernando Herrera
 homepage: https://fernando-herrera.com
 
 environment:
