--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: animate_do
 description: Simple animations inspired on Animate.css - Author Fernando Herrera
-version: 0.1.2
+version: 0.1.3
 homepage: https://fernando-herrera.com
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
-  flutter: ">=1.10.0 <2.0.0"
+  # flutter: ">=1.10.0 <2.0.0"
 
 dependencies:
   flutter:
@@ -19,14 +19,14 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
-flutter:
-  plugin:
-    platforms:
-      android:
-        package: com.fernando-herrera.animate_do
-        pluginClass: animate_do
-      ios:
-        pluginClass: animate_do
+# flutter:
+#   plugin:
+#     platforms:
+#       android:
+#         package: com.fernando-herrera.animate_do
+#         pluginClass: animate_do
+#       ios:
+#         pluginClass: animate_do
   # To add assets to your package, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
