--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: animate_do
-description: Simple animations inspired on Animate.css - Author Fernando Herrera
-version: 1.2.1
+description: Simple animations inspired on Animate.css
+version: 1.5.0
 homepage: https://fernando-herrera.com
+authors:
+  - Fernando Herrera <fernando.herrera85@gmail.com>
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
