--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: animate_do
-description: Beautiful animations inspired on Animate.css
+description: Beautiful animations inspired on Animate.css, every animation is a widget that contains default but customizable values that look attractive.
 version: 1.5.0
 homepage: https://fernando-herrera.com
 
