--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ version: 1.7.4
 homepage: https://fernando-herrera.com
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+  # sdk: '>=2.12.0 <3.0.0'
   # flutter: ">=1.10.0 <2.0.0"
 
 dependencies:
