--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,10 @@
 name: animate_do
 description: Beautiful animations inspired on Animate.css, every animation is a widget that contains default but customizable values that look attractive.
-version: 1.7.4
+version: 2.0.0
 homepage: https://fernando-herrera.com
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  # sdk: '>=2.12.0 <3.0.0'
-  # flutter: ">=1.10.0 <2.0.0"
+  sdk: '>=2.12.0-29.10.beta <3.0.0'
 
 dependencies:
   flutter:
