--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: animate_do
 description: Beautiful animations inspired on Animate.css, every animation is a widget that contains default but customizable values that look attractive.
-version: 2.0.0-dev.1
+version: 2.0.0
 homepage: https://fernando-herrera.com
 
 environment:
