Link to the package’s repository

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: animate_do
 description: Beautiful animations inspired on Animate.css, every animation is a widget that contains default but customizable values that look attractive.
 version: 2.0.1
 homepage: https://fernando-herrera.com
+repository: https://github.com/Klerith/animate_do_package
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
