--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: animate_do
-description: Beautiful animations inspired on Animate.css, every animation is a widget that contains default but customizable values that look attractive.
-version: 3.1.0
+description: Beautiful animations inspired on Animate.css, every animation is a customizable widget.
+version: 3.1.1
 homepage: https://fernando-herrera.com
 repository: https://github.com/Klerith/animate_do_package
 issue_tracker: https://github.com/Klerith/animate_do_package/issues
